--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Run Buddy</title>
 
-    <link rel="stylesheet" href="./assets/css/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <title>Run Buddy</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
- <!-- navigation -->
-<header>
+  <!-- navigation -->
+  <header>
     <h1>
-      <a href="/">RUN BUDDY</a>
+      <a href="/">
+        RUN BUDDY
+      </a>
     </h1>
     <nav>
+      <!-- Unordered list element -->
       <ul>
+        <!-- List item element-->
         <li>
+          <!-- Anchor element -->
           <a href="#what-we-do">What We Do</a>
         </li>
         <li>
@@ -29,71 +35,75 @@
       </ul>
     </nav>
   </header>
-  
+
   <!-- hero/jumbotron -->
   <section class="hero">
-      <div class="hero-form">
-        <h3>Get Started Today</h3>
-        <p>Fill out this form and one of our trainers will schedule a consult</p>
-        <!--Sign up form-->
-        <form>
-          <label for="name">Enter full name:</label>
-            <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
-          <label for="email">Enter email address:</label>
-            <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
-          <label for="phone">Enter a telephone number:</label>
-            <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
-          <p>
-            Have you worked out with a trainer before?
-            <input type="radio" name="trainer-confirm" id="trainer-yes" />
-              <label for="trainer-yes">Yes</label>
-            <input type="radio" name="trainer-confirm" id="trainer-no" />
-              <label for="trainer-no">No</label> 
-          </p>
-          <p>
+    <div class="hero-form">
+      <h3>Get Started Today</h3>
+      <p>Fill out this form and one of our trainers will schedule a consult</p>
+      <form>
+        <label for="name">Enter full name:</label>
+        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
+        <label for="email">Enter email address:</label>
+        <input type="text" placeholder="Email Address" name="email" id="email" class="form-input" />
+        <label for="phone">Enter a telephone number:</label>
+        <input type="text" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
+        <p>
+          Have you worked out with a trainer before?
+          <input type="radio" name="trainer-confirm" id="trainer-yes" />
+          <label for="trainer-yes">Yes</label>
+          <input type="radio" name="trainer-confirm" id="trainer-no" />
+          <label for="trainer-no">No</label>
+        </p>
+        <p>
+          <label for="checkbox">
             I acknowledge that I am at least 18 years of age.
-            <input type="checkbox" name="age-confirm" id="checkbox" />
-          </p>
-          <button type="submit">
-            Get running!
-          </button>
-        </form>
-      </div>
+          </label>
+          <input type="checkbox" name="checkpoint1" id="checkbox" />
+        </p>
+        <button type="submit">
+          Get running!
+        </button>
+      </form>
+    </div>
   </section>
-  
+
   <!-- "what we do" section -->
   <section id="what-we-do" class="intro">
     <h2 class="section-title primary-border">What We Do</h2>
     <p>
-      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+      butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue
+      Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin
+      fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+      sustainable Intelligentsia umami deep v craft
     </p>
   </section>
-  
+
   <!-- "what you do" section -->
-  <section id="what-you-do" class ="steps">
+  <section id="what-you-do" class="steps">
     <h2 class="section-title secondary-border">What You Do</h2>
 
     <div>
       <img src="./assets/images/step-1.svg" alt="" />
-      <h3>Step 1: <span>Fill Out the Form Above</span></h3>
+      <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
       <p>You're already here, so why not?</p>
     </div>
 
     <div>
       <img src="./assets/images/step-2.svg" alt="" />
-      <h3>Step 2: <span>Consult with One of Our Trainers</span></h3>
+      <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
       <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
 
     <div>
       <img src="./assets/images/step-3.svg" alt="" />
-      <h3>Step 3: <span>Get Running</span></h3>
-      <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+      <h3>Step 3: <span>Get Running.</span></h3>
+      <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
 
     <div>
       <img src="./assets/images/step-4.svg" alt="" />
-      <h3>Step 4: <span>See Results</span></h3>
+      <h3>Step 4: <span>See Results.</span></h3>
       <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
   </section>
@@ -101,56 +111,59 @@
   <!-- "meet the trainers" section -->
   <section id="your-trainers" class="trainers">
     <h2 class="section-title primary-border">Meet The Trainers</h2>
-    <!--first trainer bio-->
     <article class="trainer">
-      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
       <div class="trainer-bio text-left">
         <h3>Arron Stephens</h3>
-        <h4>Speed/Strength</h4>
+        <h4>Speed / Strength</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem provident, aliquam modi iure soluta totam incidunt libero debitis tempora illo. Culpa harum nostrum saepe inventore mollitia corporis ex recusandae soluta.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
-    <!--second trainer bio-->
+
+    <!-- second trainer bio -->
     <article class="trainer">
       <div class="trainer-bio text-right">
         <h3>Joanna Gill</h3>
         <h4>Endurance</h4>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
           itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
       <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
     </article>
-    
+
     <!-- third trainer bio -->
     <article class="trainer">
-      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
       <div class="trainer-bio text-left">
         <h3>Harry "the Headband" Smith</h3>
         <h4>Strength</h4>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
           itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
   </section>
-  
+
   <!-- "reach out" section -->
-  <section id="reach-out">
-    <section>
-      <h2>Reach Out</h2>
-      <div class="contact info">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d12944.277780376768!2d-83.6335958192027!3d35.79822843267279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d35.8023168!2d-83.623936!4m5!1s0x885c00faf300e777%3A0x46c021979e2293c1!2s2412%20Burke%20Ave%2C%20Pigeon%20Forge%2C%20TN%2037876!3m2!1d35.7986985!2d-83.6257184!5e0!3m2!1sen!2sus!4v1639245212173!5m2!1sen!2sus" 
-        width="600" 
-        height="450" 
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
+    <div class="contact-info">
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"
         style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy"></iframe>
-      </div>
+        allowfullscreen=""
+        loading="lazy">
+      </iframe>
       <div>
         <h3>Run Buddy</h3>
         <p>
@@ -160,14 +173,15 @@
         </p>
         <address>
           55 Main Street <br />
-          Some Town, CA <br/>
-          12345<br/>
-          P: 555.RUN.BUDZ (555.786.2839)<br/>
-          E: <a href="mailto:info@runbuddy.io">info@runbuddy.com</a>
+          Some Town, Ca <br />
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
       </div>
+    </div>
   </section>
-  
+
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
@@ -177,4 +191,5 @@
     </div>
   </footer>
 </body>
+
 </html>
