--- a/index.html
+++ b/index.html
@@ -181,12 +181,14 @@
       </div>
     </div>
   </section>
+  <h2 class="page-title">
+    Privacy Policy
+  </h2>
 
-  <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-      <a href="#">Read Our Privacy Policy</a><br />
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
